crates/carta/tests/snapshots/golden_e2e__mediawiki__html__definition-lists.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<dl>
<dt>Term</dt>
<dd>
Definition
</dd>
<dt>Apple</dt>
<dd>
A fruit
</dd>
</dl>
