crates/carta/tests/snapshots/golden_e2e__mediawiki__html__definition-multi.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<dl>
<dt>Fruit</dt>
<dd>
Apple
</dd>
<dd>
Banana
</dd>
<dt>Vegetable</dt>
<dd>
Carrot
</dd>
</dl>
