crates/carta/tests/snapshots/golden_e2e__mediawiki__html__definition-term-url.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<dl>
<dt><a href="http://example.com">http://example.com</a></dt>
<dd>
a definition
</dd>
</dl>
