crates/carta/tests/snapshots/golden_e2e__mediawiki__html__emphasis.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>Some <em>italic</em> and <strong>bold</strong> and
<strong><em>both</em></strong> words.</p>
