crates/carta/tests/snapshots/golden_e2e__mediawiki__html__entities.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>AT&amp;T and © and A and B here.</p>
