crates/carta/tests/snapshots/golden_e2e__mediawiki__html__external-link-bare-bracket.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>Unclosed [<a href="http://example.com">http://example.com</a>
here.</p>
