crates/carta/tests/snapshots/golden_e2e__mediawiki__html__external-link-empty-label.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>[<a href="http://example.com%5Dx">http://example.com]x</a></p>
