crates/carta/tests/snapshots/golden_e2e__mediawiki__html__heading-id-slug.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<h2 id="a_b_c.d">A, B-C.D!</h2>
