crates/carta/tests/snapshots/golden_e2e__mediawiki__html__horizontal-rule.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>Above</p>
<hr />
<p>Below</p>
